[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/whitebackground.png" type="Texture" id=1]
[ext_resource path="res://Scripts/animal.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5, 13.0417 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.7778, 17.6296 )

[sub_resource type="CircleShape2D" id=3]
radius = 48.8308

[node name="animal" type="KinematicBody2D" groups=["animals"]]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1.5, 1.5 )
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.86102e-06 )
scale = Vector2( 0.025, 0.0333333 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 0.75, 0.75 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="SenseDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="SenseDetection"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="SenseDetection" to="." method="_on_SenseDetection_area_entered"]
